Updated libraries. Updated Java version to 21. Updated copyright date.